# ai-summary

./: .dockerignore  .dockerignore.alpine  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile.alpine  README-ALPINE-DOCKER.md  README.md  _restart_helper.bat  _restart_helper.py  app.py  build-alpine.bat  build-alpine.sh  cleanup-alpine.sh  config.example.json  config.json  docker-compose.alpine.yml  docker-compose.yml  dockerfile  migrate_to_db.py  project_function_analysis.md  requirements.md  requirements.txt  run-alpine.sh  run-compose-alpine.sh  run-docker.bat  run-docker.sh  run.py  start.bat  start.sh  stop-alpine.sh  test_all_features.py  test_full_features.py  utils.py  validate-docker.sh
api/: __init__.py  files.py  pages.py  prompts.py  providers.py  settings.py  tasks.py
app/: admin.py  auth.py  database.py  dependencies.py  main.py  migration_soft_delete.py  models.py  openapi_config.py
core/: __init__.py  config.py  config_manager.py  crypto.py  errors.py  exceptions.py  log.py  logger.py  result.py  utils.py
data/: ai_summary.db
docs/: feature_modules_analysis.md  refactoring-plan.md
features/: __init__.py
frontend/: index.html
frontend-vue/: index.html  package-lock.json  package.json  vite.config.js
logs/: ai_summary.log.2026-04-20  ai_summary.log.2026-04-21  ai_summary.log.2026-04-24
managers/: __init__.py  file_manager.py  (+3 more)
sdk/: README.md  build_sdk.py  pyproject.toml
sdk/ai_summary_sdk/: __init__.py  _base.py  _retry.py  async_client.py  client.py  exceptions.py  models.py
sdk/tests/: test_async_client.py  test_client.py  test_models.py
(+185 files in other folders)
