[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-summary-sdk"
version = "0.1.0"
description = "AI Summary 服务的 Python SDK 客户端"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Summary Team" },
]
keywords = ["ai-summary", "sdk", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-summary/ai-summary"
Documentation = "https://ai-summary.github.io/sdk"
Repository = "https://github.com/ai-summary/ai-summary"
